added timer input and url display for popup

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,8 +7,7 @@
     src: url("../public/fonts/OpenSans-VariableFont.ttf");
 }
 
-@layer base {
-    html {
-        font-family: "OpenSans";
-    }
+@font-face {
+    font-family: "NovaSquare";
+    src: url("../public/fonts/NovaSquare-Regular.ttf");
 }
